plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'dev.turtywurty.gamedashboard'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'dev.turtywurty.gamedashboard'
    mainClass = 'dev.turtywurty.gamedashboard.Startup'
}

javafx {
    version = '21-ea+24'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
}

dependencies {
    implementation ('eu.hansolo:tilesfx:17.1.17') {
        exclude(group: 'org.openjfx')
    }

    implementation('io.github.cdimascio:dotenv-java:3.0.0')
    implementation('com.squareup.okhttp3:okhttp:4.12.0')
    implementation('com.google.code.gson:gson:2.10.1')
    implementation('net.harawata:appdirs:1.2.2')

    implementation('org.slf4j:slf4j-api:2.0.12')
    implementation('org.slf4j:slf4j-simple:2.0.13')

    implementation('org.projectlombok:lombok:1.18.34')
    annotationProcessor('org.projectlombok:lombok:1.18.34')

    implementation('org.jetbrains:annotations:24.1.0')
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}